--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "element-plus": "^2.2.18",
     "vue": "^3.2.41"
   },
   "devDependencies": {
